docs: 更新 README 图片展示并修复 package.json 仓库信息

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "version": "1.0.1",
   "author": "kumaomao",
   "publisher": "windsurf",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kumaomao/windsurf-login"
+  },
   "engines": {
     "vscode": "^1.85.0"
   },
